--- a/stable/traefik/templates/daemonset.yaml
+++ b/stable/traefik/templates/daemonset.yaml
@@ -10,6 +10,12 @@ metadata:
     release: "{{ .Release.Name }}"
     heritage: "{{ .Release.Service }}"
 spec:
+ selector:
+   matchLabels:
+       app: {{ template "fullname" . }}
+       chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
+       release: "{{ .Release.Name }}"
+       heritage: "{{ .Release.Service }}"
   template:
     metadata:
       labels:
