--- a/incubator/litecoind/templates/svc.yaml
+++ b/incubator/litecoind/templates/svc.yaml
@@ -10,7 +10,14 @@ metadata:
 spec:
   ports:
     - name: rpc
-      port: {{ .Values.rpcPort }}
+      port: {{ .Values.service.rpcPort }}
       targetPort: rpc
+    - name: p2p
+      port: {{ .Values.service.p2pPort }}
+      targetPort: p2p
+    - name: testnet
+      port: {{ .Values.service.testnetPort }}
   selector:
     app: {{ template "litecoind.name" . }}
+    release: "{{ .Release.Name }}"
+    litecoind-rotation: {{ .Values.service.selector }}
