--- a/incubator/kafka/values.yaml
+++ b/incubator/kafka/values.yaml
@@ -57,6 +57,14 @@ affinity: {}
 configurationOverrides:
   "offsets.topic.replication.factor": 3
 
+## Service visibility overrides.
+## Can be set to NodePort or LoadBalancer as per Kubernetes API
+serviceType: ClusterIP
+loadBalancerSourceRanges:
+- 0.0.0.0/0
+# Optionally assign a known public LB IP
+# loadBalancerIP: 1.2.3.4
+
 # ------------------------------------------------------------------------------
 # Zookeeper:
 # ------------------------------------------------------------------------------
