--- a/incubator/zcashd/values.yaml
+++ b/incubator/zcashd/values.yaml
@@ -1,13 +1,13 @@
 image:
   repository: "kuberstack/zcashd"
-  tag: "latest"
+  tag: "1.0"
   pullPolicy: IfNotPresent
 
-rpcPort: 443
-
-ssl:
-  enabled: true
-  secretName: zcashd-ssl
+service:
+  rpcPort: 8232
+  p2pPort: 8233
+  testnetPort: 18232
+  selector: tx-broadcast-svc
 
 persistence:
   enabled: true
@@ -30,13 +30,11 @@ resources: {}
 #    memory: 512Mi
 #    cpu: 300m
 
-# Custom zcashd configuration files used to override default zcashd settings
-configurationFiles:
+# Custom zcashd configuration file used to override default zcashd settings
+configurationFile:
   zcash.conf: |-
     onlynet=IPv4
     server=1
     rpcuser=rpcuser
     rpcpassword=rpcpassword
-    rpcport=9332
-    rpcconnect=127.0.0.1
     printtoconsole=1
