--- a/incubator/redis-auto-cluster/templates/network_policy.yaml
+++ b/incubator/redis-auto-cluster/templates/network_policy.yaml
@@ -10,7 +10,7 @@ metadata:
     release: {{ .Release.Name }}
     heritage: {{ .Release.Service }}
   annotations:
-    "helm.sh/hook": post-install,post-upgrade
+    "helm.sh/hook": post-install
     "helm.sh/hook-weight": "0"
 spec:
   podSelector:
