--- a/incubator/bitcoind/values.yaml
+++ b/incubator/bitcoind/values.yaml
@@ -7,6 +7,7 @@ service:
   rpcPort: 8332
   p2pPort: 8333
   testnetPort: 18332
+  testnetP2pPort: 18333
   selector: tx-broadcast-svc
 
 persistence:
