--- a/stable/metabase/templates/service.yaml
+++ b/stable/metabase/templates/service.yaml
@@ -7,9 +7,9 @@ metadata:
     chart: {{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}
     release: {{ .Release.Name }}
     heritage: {{ .Release.Service }}
-{{- if .Values.metabase.service.annotations }}
+{{- if .Values.service.annotations }}
   annotations:
-{{ toYaml .Values.metabase.service.annotations | indent 4 }}
+{{ toYaml .Values.service.annotations | indent 4 }}
 {{- end }}
 spec:
   type: {{ .Values.service.type }}
