use .files.get for external files

--- a/stable/percona-xtradb-cluster/templates/config-map_startup-scripts.yaml
+++ b/stable/percona-xtradb-cluster/templates/config-map_startup-scripts.yaml
@@ -9,8 +9,6 @@ metadata:
     heritage: "{{ .Release.Service }}"
 data:
   entrypoint.sh: |
-  {{- range .Files.Lines "files/entrypoint.sh" }}
-  {{ . | indent 2 }}{{ end }}
+{{ .Files.Get "files/entrypoint.sh" | indent 4 }}
   functions.sh: |
-  {{- range .Files.Lines "files/functions.sh" }}
-  {{ . | indent 2 }}{{ end }}
+{{ .Files.Get "files/functions.sh" | indent 4 }}
