--- a/stable/percona-xtradb-cluster/templates/config-map_mysql-config.yaml
+++ b/stable/percona-xtradb-cluster/templates/config-map_mysql-config.yaml
@@ -12,11 +12,9 @@ data:
 {{ toYaml .Values.configFiles | indent 2 }}
 {{ if not (index .Values.configFiles "node.cnf") }}
   node.cnf: |
-  {{- range .Files.Lines "files/node.cnf" }}
-  {{ . | indent 2 }}{{ end }}
+{{ .Files.Get "files/node.cnf" | indent 4 }}
 {{ end }}
 {{ else }}
   node.cnf: |
-  {{- range .Files.Lines "files/node.cnf" }}
-  {{ . | indent 2 }}{{ end }}
+{{ .Files.Get "files/node.cnf" | indent 4 }}
 {{ end }}
