set http.port from values so it's less of a burden to change it for users

--- a/incubator/logstash/values.yaml
+++ b/incubator/logstash/values.yaml
@@ -9,7 +9,7 @@ image:
   pullPolicy: IfNotPresent
 service:
   type: ClusterIP
-  internalPort: 9600
+  internalPort: 9600 # logstash monitoring port
   ports:
     - name: "syslog-tcp"
       protocol: TCP
