--- a/incubator/logstash/templates/configmap.yaml
+++ b/incubator/logstash/templates/configmap.yaml
@@ -11,6 +11,7 @@ metadata:
 data:
   logstash.yml: |-
     http.host: "0.0.0.0"
+    http.port: {{ .Values.service.internalPort }}
     path.config: /usr/share/logstash/pipeline
 {{- if .Values.configData }}
 {{ toYaml .Values.configData | indent 4 }}
