add monitoring port separately, so you don't have to declare it the same as the input ports

--- a/incubator/logstash/templates/service.yaml
+++ b/incubator/logstash/templates/service.yaml
@@ -16,6 +16,11 @@ spec:
       protocol: {{ $port.protocol }}
       targetPort: {{ $port.containerPort }}
   {{- end }}
+    - name: "logstash-monitoring"
+      port: {{ .Values.service.internalPort }}
+      protocol: "TCP"
+      targetPort: {{ .Values.service.internalPort }}
+
   selector:
     app: {{ template "logstash.name" . }}
     release: {{ .Release.Name }}
