Use default auto generated postgresql password and document using it for scaling the cluster

--- a/stable/artifactory-ha/values.yaml
+++ b/stable/artifactory-ha/values.yaml
@@ -17,7 +17,7 @@ postgresql:
   enabled: true
   postgresDatabase: "artifactory"
   postgresUser: "artifactory"
-  postgresPassword: "artIfakt0ri1973"
+  postgresPassword:
   service:
     port: 5432
   persistence:
