Several changes in support of improved helm functionality
1. Bring container to latest stable versioned release
2. Add timezone option setting
3. Add Day of Week/Time of Day exclusions
4. Update readme with new options and version bump

--- a/stable/chaoskube/templates/deployment.yaml
+++ b/stable/chaoskube/templates/deployment.yaml
@@ -28,6 +28,15 @@ spec:
         {{- if not .Values.dryRun }}
         - --no-dry-run
         {{- end }}
+        {{- if .Values.excludedWeekdays }}
+        - --excluded-weekdays={{ .Values.excludedWeekdays }}
+        {{- end }}
+        {{- if .Values.excludedTimesOfDay }}
+        - --excluded-times-of-day={{ .Values.excludedTimesOfDay }}
+        {{- end }}
+        {{- if .Values.timezone }}
+        - --timezone={{ .Values.timezone }}
+        {{- end }}
         resources:
           requests:
             cpu: {{ .Values.resources.cpu }}
