--- a/stable/chaoskube/values.yaml
+++ b/stable/chaoskube/values.yaml
@@ -5,7 +5,7 @@ name: chaoskube
 image: quay.io/linki/chaoskube
 
 # docker image tag
-imageTag: v0.6.1
+imageTag: v0.7.1
 
 # number of replicas to run
 replicas: 1
@@ -24,6 +24,15 @@ namespaces:
 
 # don't kill pods, only log what would have been done
 dryRun: true
+
+# Uncomment to set values for exempting specific week days from Chaoskube Actions
+# excludedWeekdays: Sat,Sun
+
+# Uncomment to set values for excluding specific times of day from Chaoskube Actions
+# excludedTimesOfDay: 22:00-08:00
+
+# Uncomment to set specific Timezone
+# timezone: America/New_York
 
 # resource requests and limits
 resources:
