Use deployment strategy recreate for the GoCD server deployment. * Provide the gocd cluster role permissions to list namespaces * Improvements to the Notes

--- a/incubator/gocd/templates/gocd-ea-cluster-role.yaml
+++ b/incubator/gocd/templates/gocd-ea-cluster-role.yaml
@@ -21,5 +21,9 @@ rules:
 - apiGroups: [""]
   resources:
   - events
-  verbs: ["list","watch"]
+  verbs: ["list", "watch"]
+- apiGroups: [""]
+  resources:
+  - namespaces
+  verbs: ["list", "get"]
 {{ end }}
