Remove the Daemonset when the Sumologic collector URL value is not provided

--- a/stable/sumologic-fluentd/templates/daemonset.yaml
+++ b/stable/sumologic-fluentd/templates/daemonset.yaml
@@ -1,3 +1,5 @@
+# Sumologic collector URL is required
+{{- if .Values.sumologic.collectorUrl -}}
 apiVersion: extensions/v1beta1
 kind: DaemonSet
 metadata:
@@ -173,3 +175,4 @@ spec:
     {{- end }}
   updateStrategy:
     type: "{{ .Values.updateStrategy }}"
+{{- end }}
