--- a/stable/artifactory-ha/templates/artifactory-nfs-pvc.yaml
+++ b/stable/artifactory-ha/templates/artifactory-nfs-pvc.yaml
@@ -3,13 +3,13 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: {{ template "artifactory.name" . }}-data-pv
+  name: {{ template "artifactory-ha.name" . }}-data-pv
   labels:
-    app: {{ template "artifactory.name" . }}
+    app: {{ template "artifactory-ha.name" . }}
     chart: {{ .Chart.Name }}-{{ .Chart.Version }}
     heritage: {{ .Release.Service }}
     release: {{ .Release.Name }}
-    id: {{ template "artifactory.name" . }}-data-pv
+    id: {{ template "artifactory-ha.name" . }}-data-pv
     type: nfs-volume
 spec:
   capacity:
@@ -25,9 +25,9 @@ spec:
 kind: PersistentVolumeClaim
 apiVersion: v1
 metadata:
-  name: {{ template "artifactory.name" . }}-data-pvc
+  name: {{ template "artifactory-ha.name" . }}-data-pvc
   labels:
-    app: {{ template "artifactory.name" . }}
+    app: {{ template "artifactory-ha.name" . }}
     chart: {{ .Chart.Name }}-{{ .Chart.Version }}
     heritage: {{ .Release.Service }}
     release: {{ .Release.Name }}
@@ -41,19 +41,19 @@ spec:
       storage: {{ .Values.artifactory.persistence.nfs.capacity }}
   selector:
     matchLabels:
-      id: {{ template "artifactory.name" . }}-data-pv
+      id: {{ template "artifactory-ha.name" . }}-data-pv
 ---
 ### Artifactory HA backup
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: {{ template "artifactory.name" . }}-backup-pv
+  name: {{ template "artifactory-ha.name" . }}-backup-pv
   labels:
-    app: {{ template "artifactory.name" . }}
+    app: {{ template "artifactory-ha.name" . }}
     chart: {{ .Chart.Name }}-{{ .Chart.Version }}
     heritage: {{ .Release.Service }}
     release: {{ .Release.Name }}
-    id: {{ template "artifactory.name" . }}-backup-pv
+    id: {{ template "artifactory-ha.name" . }}-backup-pv
     type: nfs-volume
 spec:
   capacity:
@@ -69,9 +69,9 @@ spec:
 kind: PersistentVolumeClaim
 apiVersion: v1
 metadata:
-  name: {{ template "artifactory.name" . }}-backup-pvc
+  name: {{ template "artifactory-ha.name" . }}-backup-pvc
   labels:
-    app: {{ template "artifactory.name" . }}
+    app: {{ template "artifactory-ha.name" . }}
     chart: {{ .Chart.Name }}-{{ .Chart.Version }}
     heritage: {{ .Release.Service }}
     release: {{ .Release.Name }}
@@ -85,5 +85,5 @@ spec:
       storage: {{ .Values.artifactory.persistence.nfs.capacity }}
   selector:
     matchLabels:
-      id: {{ template "artifactory.name" . }}-backup-pv
+      id: {{ template "artifactory-ha.name" . }}-backup-pv
 {{- end }}
