--- a/stable/artifactory-ha/templates/artifactory-secrets.yaml
+++ b/stable/artifactory-ha/templates/artifactory-secrets.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: {{ template "artifactory.name" . }}-master-key
+  name: {{ template "artifactory-ha.name" . }}-master-key
   labels:
-    app: {{ template "artifactory.name" . }}
+    app: {{ template "artifactory-ha.name" . }}
     chart: {{ .Chart.Name }}-{{ .Chart.Version }}
     heritage: {{ .Release.Service }}
     release: {{ .Release.Name }}
