--- a/stable/artifactory-ha/templates/nginx-service.yaml
+++ b/stable/artifactory-ha/templates/nginx-service.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ template "artifactory.nginx.name" . }}
+  name: {{ template "artifactory-ha.nginx.name" . }}
   labels:
-    app: {{ template "artifactory.name" . }}
+    app: {{ template "artifactory-ha.name" . }}
     chart: {{ .Chart.Name }}-{{ .Chart.Version }}
     heritage: {{ .Release.Service }}
     release: {{ .Release.Name }}
@@ -27,6 +27,6 @@ spec:
     protocol: TCP
     name: https
   selector:
-    app: {{ template "artifactory.name" . }}
+    app: {{ template "artifactory-ha.name" . }}
     component: "{{ .Values.nginx.name }}"
     release: {{ .Release.Name }}
