--- a/stable/artifactory-ha/templates/artifactory-secrets.yaml
+++ b/stable/artifactory-ha/templates/artifactory-secrets.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: {{ template "artifactory-ha.name" . }}-master-key
+  name: {{ template "artifactory-ha.fullname" . }}
   labels:
     app: {{ template "artifactory-ha.name" . }}
     chart: {{ .Chart.Name }}-{{ .Chart.Version }}
@@ -10,4 +10,6 @@ metadata:
 type: Opaque
 data:
   master-key: {{ .Values.artifactory.masterKey | b64enc | quote }}
-
+{{- if .Values.database.password }}
+  db-password: {{ .Values.database.password | b64enc | quote }}
+{{- end }}
