--- a/incubator/etcd/values.yaml
+++ b/incubator/etcd/values.yaml
@@ -26,6 +26,6 @@ Storage: "1Gi"
 ## Node labels and tolerations for pod assignment
 ## ref: https://kubernetes.io/docs/concepts/configuration/assign-pod-node/#nodeselector
 ## ref: https://kubernetes.io/docs/concepts/configuration/assign-pod-node/#taints-and-tolerations-beta-feature
-nodeSelector: {}
-tolerations: []
-affinity: {}
+NodeSelector: {}
+Tolerations: []
+Affinity: {}
