--- a/stable/luigi/templates/service.yaml
+++ b/stable/luigi/templates/service.yaml
@@ -11,7 +11,7 @@ spec:
   type: {{ .Values.service.type }}
   ports:
     - port: {{ .Values.service.externalPort }}
-      targetPort: {{ .Values.service.internalPort }}
+      targetPort: 8082
       protocol: TCP
       name: http
   selector:
